# Bad3D

./: .gitignore  CMakeLists.txt  README.md  generate_vs2017_win64.bat
src/: BApplication.h  CMakeLists.txt  main.cpp
